overlay z-index fix

--- a/source/_patterns/02-organisms/00-global/02-basic-layout.scss
+++ b/source/_patterns/02-organisms/00-global/02-basic-layout.scss
@@ -22,7 +22,7 @@
       bottom:0;
       opacity:0;
       background:transparentize($colorBlack, 0.5);
-      z-index:99;
+      z-index:5;
     }
   }
   @media only screen and (min-width: $breakpointDesktop) {
